substrate/frame/support/test/tests/pallet_ui/event_wrong_item_name.stderr
error: expected `Event`
  --> tests/pallet_ui/event_wrong_item_name.rs:36:11
   |
36 |     pub enum Foo {}
   |              ^^^
